@@ -57,10 +57,10 @@ val take_formula : t -> Formula.t * t
 
 val empty_seq : int -> t
 
-val create_with_ref_list : global_reference list ->
-  int -> Proof_type.goal sigma -> t
+val extend_with_ref_list : global_reference list ->
+  t -> Proof_type.goal sigma -> t
 
-val create_with_auto_hints : Auto.hint_db_name list -> 
-  int -> Proof_type.goal sigma -> t
+val extend_with_auto_hints : Auto.hint_db_name list -> 
+  t -> Proof_type.goal sigma -> t
 
 val print_cmap: global_reference list CM.t -> unit 
